<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MoverInfo" Id="{078d4599-567e-474f-b4fc-f0d653375f67}">
    <Declaration><![CDATA[TYPE ST_MoverInfo :
STRUCT

	MoverOtcid :  STRING(20);
	IsVirtuell : BOOL;
	IsActive : BOOL;
	ActPos: LREAL;
	ActVelo: LREAL;
	PlanarMoverCommandMode :STRING(30);// MC_Planar_Mover_Command_Mode;
	State : STRING(20);//MC_Planar_State;
	Positition : LREAL;
	Track :STRING(20);
	Error: BOOL;
	ErrorID : UDINT;
	TargetTrackPosition  : LREAL;
	TargetTrack : Otcid;
	RemainingDistance : LREAL;
	Gap : LREAL;
	LimitVelo : LREAL; 
	LimitAcc : LREAL;
	LimitDec : LREAL;
	LimitJerk : LREAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>