<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ScopeValues" Id="{072bce8a-c7a0-4588-9b28-c1276b939c15}">
    <Declaration><![CDATA[TYPE ST_ScopeValues :
STRUCT
	SetCurrent 		: LREAL;
	ActHwPosModulo 	: LREAL;
	ActPosError		: LREAL;
	SetVeloItp		: LREAL;
	SetAccItp	 	: LREAL;
	ActVelo 		: LREAL;
	SetForce		: LREAL;
	ActStatus		: driveState;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>